<resources>
    <string name="app_name">CoviCare</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="login_with_phone_number">Login with phone number</string>
    <string name="sending_otp_to_confirm">Sending OTP to confirm...</string>
    <string name="submit">Submit</string>
    <string name="safety_net_api_key">AIzaSyA9T26TTUxIE4kWgv063QGocxE5PmwowKA</string>
    <string name="capture">Capture</string>
    <string name="device_key">Device Key</string>
    <string name="temperature">Temperature</string>
    <string name="spo2">SpO2</string>
    <string name="pulse">Pulse</string>
    <string name="cough_detected">Cough Detected</string>
    <string name="token_expiration_error">Token expired, please try again!</string>
    <string name="token_validation_error">Invalid token, please try again!</string>
    <string name="question">QUESTION</string>
    <string name="question1">Age</string>
    <string name="question2">Gender</string>
    <string name="question3">Do you have a family history of mental illness?</string>
    <string name="question4">Does your employer provide mental health benefits?</string>
    <string name="question5">Do you know the options for mental health care your employer provides?</string>
    <string name="question6">Is your anonymity protected if you choose to take advantage of mental health or substance abuse treatment resources?</string>
    <string name="question7">How easy is it for you to take medical leave for a mental health condition?</string>
    <string name="question8">If you have a mental health condition, do you feel that it interferes with your work?</string>
    <string name="return_back">Return</string>
    <string name="consider_treatment">Please visit a doctor for consultation</string>
    <string name="report_normal">Report normal!</string>
    <string name="app_tag">It\'s Vital, to Stay Safe</string>
    <string name="welcome_string">Welcome to,\nCoviCare</string>
    <string name="signup_welcome_string">Signup to CoviCare</string>
    <string name="uemail_hint_string">User Email</string>
    <string name="uname_hint_string">User Name</string>
    <string name="pass_hint_string">Password</string>
    <string name="forgot_pass_string">Forgot Password?</string>
    <string name="login_string">Login</string>
    <string name="new_user_string">New User? Sign Up</string>
    <string name="capture_image">Capture Image</string>
    <string name="pick_image">Pick Image</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="vital_history">Vital History</string>
    <string name="evaluate_mental_health">Mental Health</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="positive">POSITIVE</string>
    <string name="negative">NEGATIVE</string>
</resources>