<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"

    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="44sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/group"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/login_with_phone_number"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/color_transparent"
                android:digits="0123456789"
                android:gravity="center_horizontal"
                android:hint="@string/enter_your_number"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingVertical="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/phone_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_in_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in with email instead!"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="Register"

            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/biometric_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorSecondary"
        android:text="Authenticate"
        android:visibility="gone" />


</RelativeLayout>